--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="btn-start" id="btn-start">start</div>
 
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
